@@ -1,5 +1,7 @@
 Changes
 examples/ex1.pl
+examples/ex10.pl
+examples/ex11.pl
 examples/ex2.pl
 examples/ex3.pl
 examples/ex4.pl
