@@ -1,7 +1,8 @@
 TODO
 ====
-1. Priklad na check_number_of_items() do dokumentace
 2.
 
 Applied
 =======
+1. Priklad na check_number_of_items() do dokumentace
+OK [20211019] skim
