@@ -1,5 +1,6 @@
 0.04
  - Add check_length().
+ - Add example for check_number_of_items().
  - Add test for check_isa(). Testing of another object.
 
 0.03 2020-12-11T14:10:51+01:00
